name:                data-fix1
version:             0.1.0.0
synopsis:            Fixed point for types of kind (k -> *) -> k -> *
license:             MIT
license-file:        LICENSE
author:              Paweł Nowak
maintainer:          pawel834@gmail.com
copyright:           Paweł Nowak 2015
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Fix1
  default-extensions:  NoImplicitPrelude
  build-depends:       base == 4.*, base-compat >=0.8 && <1
  hs-source-dirs:      src
  default-language:    Haskell2010